src/infra/gateway/api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: snisid-api-gateway
  namespace: snisid-core
spec:
  gatewayClassName: kong
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: snisid-tls-secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: identity-service-route
  namespace: snisid-core
  annotations:
    konghq.com/plugins: global-oidc, global-rate-limit
spec:
  parentRefs:
  - name: snisid-api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1/identity
    backendRefs:
    - name: identity-service
      port: 50051
